--- a/llm_configs/mistral-7b.yaml
+++ b/llm_configs/mistral-7b.yaml
@@ -1,4 +1,4 @@
-model: "model/mistral-7b-v0.1.Q4_K_M.gguf"
+model: "models/mistral-7b-v0.1.Q4_K_M.gguf"
 max_tokens: 1024
 temperature: 0.1
 top_p: 0.5
