--- a/prompt_configs/anonymize_emails.yaml
+++ b/prompt_configs/anonymize_emails.yaml
@@ -1,8 +1,97 @@
-AnonymizeAuthor:
+Anonymisierung:
+  Restrictor:
+    "Name": "TextEqual.TextEqual"
+    Params:
+      alter_tokens: [">NAME<"]
   Context: >
-    Replace the author name at every instance in the email below by Max Mustermann.
-    Output the entire email with the replaced name.
-AnonymizeRecipent:
-  Context: >
-    Replace the recipient at every instance in the email below by John Doe.
-    Output the entire email with the replaced name.
+        Ersetze alle Namen aus dem folgenden Text durch den Platzhalter >NAME<:
+  Examples:
+    Example_1:
+      Input: >
+        Lieber Dr Winkelmann,
+        Mein Name ist Oli Sharif. Können Sie mir ein Exemplar Ihres Buches zukommen lassen?
+        
+        mit freundlichen Grüßen,
+        Oli Sharif
+      Output: >
+        Lieber >NAME<,
+        Mein Name ist >NAME<. Können Sie mir ein Exemplar Ihres Buches zukommen lassen?
+        
+        mit freundlichen Grüßen,
+        >NAME<
+    Example_2:
+      Input: >
+        Sehr geehrte Damen und Herren,
+        mein Name ist Jens Winkelmann. Hier in Wanne-Eickel läuft mal wieder gar nix.
+        
+        Was ist da wieder los bei Vodafone?
+        
+        mit enttäuschenden Grüßen,
+        Jens Winkelmann
+      Output: >
+        Sehr geehrte Damen und Herren,
+        mein Name ist >NAME<. Hier in Wanne-Eickel läuft mal wieder gar nix.
+        
+        Was ist da wieder los bei Vodafone?
+        
+        mit enttäuschenden Grüßen,
+        >NAME<
+    Example_3:
+      Input: >
+        Hallo,
+        mein Name ist Hainer. Ich habe eine Frage zu meinem DSL-Vertrag.
+        Bitte rufen Sie mich unter folgender Nummer zurück: 01739484727405.
+        
+        Mfg
+        Hainer Müller
+      Output: >
+        Hallo,
+        mein Name ist >NAME<. Ich habe eine Frage zu meinem DSL-Vertrag.
+        Bitte rufen Sie mich unter folgender Nummer zurück: 01739484727405.
+        
+        Mfg
+        >NAME<
+    Example_4:
+      Input: >
+        Name: Jessica Mustermann
+        Kundennummer: 1234043
+        
+        Guten Tag,
+        ich möchte mich über den schlechten Service ihrer Firma beschweren.
+        Seit Tagen habe ich kein Internet. Bitte klären Sie das.
+        
+        Viele Grüße,
+        Jessica Mustermann
+      Output: >
+        Name: >NAME<
+        Kundennummer: 1234043
+        
+        Guten Tag,
+        ich möchte mich über den schlechten Service ihrer Firma beschweren.
+        Seit Tagen habe ich kein Internet. Bitte klären Sie das.
+        
+        Viele Grüße,
+        >NAME<
+      
+        
+#Kundennummern:
+#  Context: >
+#    Ersetze alle Kundennummern in der folgenden Email mit >NUMMER<.
+#    Gib weiterhin die gesamte korrigierte Email aus.
+#  Example_0:
+#    Input: >
+#      Sehr geehrte Damen und Herren,
+#      
+#      Mein Handy funktioniert nicht. meine Kundennummer lautet 579302.  
+#      Was ist da wieder los bei Vodafone?
+#        
+#      mit enttäuschenden Grüßen,
+#      >NAME<
+#    Output: >
+#      Sehr geehrte Damen und Herren,
+#      
+#      Mein Handy funktioniert nicht. meine Kundennummer lautet >NUMMER<.  
+#      Was ist da wieder los bei Vodafone?
+#        
+#      mit enttäuschenden Grüßen,
+#      >NAME<
