--- a/config.yaml
+++ b/config.yaml
@@ -1,2 +1,4 @@
-llm_config: "llm_configs/llama2-7b-32K-instruct.yaml"
-prompt_config: "prompt_configs/anonymize_emails.yaml"
+llm_config: "llm_configs/roberta_finetuned.yaml"
+prompt_config: "prompt_configs/anonymize_emails-NER.yaml"
+module_name: "fine-tuned_ner"
+model_type: "NERModel"
