configs for flair

--- a/config_prompt/anonymize_emails-NER.yaml
+++ b/config_prompt/anonymize_emails-NER.yaml
@@ -1,11 +1,11 @@
 Anonymisierung_Name:
-  model_type: "ner_model/RobertaModel"
+  model_type: "ner_model/FlairModel"
   replace_token: ">NAME<"
-  entity_type: "I-PER"
+  entity_type: "PER"
 Anonymisierung_Ort:
-  model_type: "ner_model/RobertaModel"
+  model_type: "ner_model/FlairModel"
   replace_token: ">ORT<"
-  entity_type: "I-LOC"
+  entity_type: "LOC"
 Anonymisierung_Zahl:
   model_type: "regex_model/Regex"
   pattern: "\\d"
