--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,3 @@
 config_model:
-  ner_model: "config_model/roberta_finetuned.yaml"
+  ner_model: "config_model/flair.yaml"
 config_prompt: "config_prompt/anonymize_emails-NER.yaml"
