--- a/config_prompt/anonymize_emails-PROMPT.yaml
+++ b/config_prompt/anonymize_emails-PROMPT.yaml
@@ -1,91 +1,39 @@
 Anonymisierung:
   replace_token: ">NAME<"
+  model:
+    model_wrapper: "llm_model/PromptingModel"
+    model_config: "config_model/german-mistral.yaml"
   Context: >
-    Extrahiere alle Namen aus dem folgenden Text.
-    Gib die Namen in einer Liste aus.
+    Extrahiere den Namen des Authors der folgenden Email und gib alle Varianten des Namens als Liste [] zurück.
   Examples:
     Example_1:
-      Input: >
-        Lieber Dr Winkelmann
-      Output: ["Winkelmann"]
-    Example_2:
-      Input: >
-        Mein Name ist Oli Sharif
-      Output: ["Oli Sharif"]
-    Example_3:
-      Input: >
-        Sehr geehrte Damen und Herren
-      Output: []
-    Example_4:
-      Input: >
-        Mit freundlichen Grüßen,
-
-        Jens Winkelmann
-      Output: ["Jens Winkelmann"]
-    Example_5:
-      Input: >
-        Viele Grüße,
-        Hainer Müller
-      Output: ["Hainer Müller"]
-    Example_6:
-      Input: >
-        ich hatte am Telefon bereits mit Herrn Stroganov gesprochen
-      Output: ["Stroganov"]
-    Example_7:
       Input: >
         Name: Jessica Mustermann
         Kundennummer: 1234043
         Guten Tag Herr Ulyanov,
-        ich möchte mich über den schlechten Service ihrer Firma beschweren
-      Output: ["Ulyanov", "Jessica Mustermann"]
-    Example_8:
-      Input: >
-        Ich bin bei Vodafone schon seit 20 Jahren Kunde
-      Output: []
-    Example_9:
-      Input: >
+        ich möchte mich über den schlechten Service ihrer Firma beschweren.
         Viele Grüße,
-
-        Sabrina N.
-      Output: ["Sabrina N."]
-    Example_10:
-      Input: >
-        Julia Meier hat gestern einen neuen Vertrag unterzeichnet.
-      Output: ["Julia Meier"]
-    Example_11:
+        J. Mustermann
+      Output: ["Jessica Mustermann", "J. Mustermann"]
+    Example_2:
       Input: >
         Sehr geehrtes Support-Team,
 
-        ich hoffe, Sie können mir bei einem Problem weiterhelfen, das ich mit Ihrem Produkt habe
-      Output: []
-    Example_12:
+        ich habe eine Problem mit Ihrem Produkt.
+        ich hoffe, Sie können mir bei einem Problem weiterhelfen, das ich mit Ihrem Produkt habe.
+
+        mfg
+        S. Peterson
+      Output: ["S. Peterson"]
+    Example_3:
       Input: >
+        Hallo Frau Michaelson,
         Mein Name ist Michael Anderson und ich vertrete 1&1,
         ein aufstrebendes Unternehmen, das sich auf Telekommunikation spezialisiert hat
         und ich schreibe Ihnen, um nähere Informationen bezüglich Ihrer Produktpalette,
         deren Verfügbarkeit sowie etwaiger Mengenrabatte oder Sonderkonditionen für Großbestellungen zu erfragen,
-        da wir derzeit auf der Suche nach zuverlässigen Lieferanten für eine langfristige Geschäftspartnerschaft sind
-      Output: ["Michael Anderson"]
+        da wir derzeit auf der Suche nach zuverlässigen Lieferanten für eine langfristige Geschäftspartnerschaft sind.
 
-        
-#Kundennummern:
-#  Context: >
-#    Ersetze alle Kundennummern in der folgenden Email mit >NUMMER<.
-#    Gib weiterhin die gesamte korrigierte Email aus.
-#  Example_0:
-#    Input: >
-#      Sehr geehrte Damen und Herren,
-#      
-#      Mein Handy funktioniert nicht. meine Kundennummer lautet 579302.  
-#      Was ist da wieder los bei Vodafone?
-#        
-#      mit enttäuschenden Grüßen,
-#      >NAME<
-#    Output: >
-#      Sehr geehrte Damen und Herren,
-#      
-#      Mein Handy funktioniert nicht. meine Kundennummer lautet >NUMMER<.  
-#      Was ist da wieder los bei Vodafone?
-#        
-#      mit enttäuschenden Grüßen,
-#      >NAME<
+        mit freundlichen Grüßen
+        Michael Anderson
+      Output: ["Michael Anderson"]
