--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,20 @@
 accelerate==0.24.1
+annotated-types==0.6.0
 beautifulsoup4==4.12.2
+blis==0.7.11
 boto3==1.28.75
 botocore==1.31.75
 bpemb==0.3.4
+catalogue==2.0.10
 certifi==2023.7.22
 charset-normalizer==3.3.1
 click==8.1.7
+cloudpathlib==0.16.0
+confection==0.1.3
 conllu==4.5.3
 contourpy==1.1.1
 cycler==0.12.1
+cymem==2.0.8
 Deprecated==1.2.14
 diskcache==5.6.3
 filelock==3.12.4
@@ -25,6 +31,7 @@ Jinja2==3.1.2
 jmespath==1.0.1
 joblib==1.3.2
 kiwisolver==1.4.5
+langcodes==3.3.0
 langdetect==1.0.9
 llama_cpp_python==0.2.11
 lxml==4.9.3
@@ -34,14 +41,18 @@ more-itertools==10.1.0
 mpld3==0.5.9
 mpmath==1.3.0
 multipledispatch==1.0.0
+murmurhash==1.0.10
 networkx==3.2.1
 nltk==3.8.1
 numpy==1.26.1
 packaging==23.2
 Pillow==10.1.0
 pptree==3.1
+preshed==3.0.9
 protobuf==4.24.4
 psutil==5.9.6
+pydantic==2.4.2
+pydantic_core==2.10.1
 pyparsing==3.1.1
 pyperclip==1.8.2
 PySocks==1.7.1
@@ -60,17 +71,26 @@ sentencepiece==0.1.99
 six==1.16.0
 smart-open==6.4.0
 soupsieve==2.5
+spacy==3.7.2
+spacy-legacy==3.0.12
+spacy-llm==0.6.2
+spacy-loggers==1.0.5
 sqlitedict==2.1.0
+srsly==2.4.8
 sympy==1.12
 tabulate==0.9.0
+thinc==8.2.1
 threadpoolctl==3.2.0
 tokenizers==0.14.1
 torch==2.1.0
 tqdm==4.66.1
 transformer-smaller-training-vocab==0.3.2
 transformers==4.34.1
+typer==0.9.0
 typing_extensions==4.8.0
 urllib3==1.26.18
+wasabi==1.1.2
 wcwidth==0.2.9
+weasel==0.3.4
 Wikipedia-API==0.6.0
 wrapt==1.15.0
