--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,82 @@
+accelerate==0.26.1
 annotated-types==0.6.0
 anyio==4.2.0
+beautifulsoup4==4.12.3
+boto3==1.34.29
+botocore==1.34.29
+bpemb==0.3.4
+certifi==2023.11.17
+charset-normalizer==3.3.2
 click==8.1.7
+conllu==4.5.3
+contourpy==1.2.0
 CouchDB==1.2
+cycler==0.12.1
+Deprecated==1.2.14
 fastapi==0.109.0
+filelock==3.13.1
+flair==0.13.1
+fonttools==4.47.2
+fsspec==2023.12.2
+ftfy==6.1.3
+gdown==5.0.1
+gensim==4.3.2
 h11==0.14.0
+huggingface-hub==0.20.3
 idna==3.6
+Janome==0.5.0
+Jinja2==3.1.3
+jmespath==1.0.1
+joblib==1.3.2
+kiwisolver==1.4.5
+langdetect==1.0.9
+lxml==5.1.0
+MarkupSafe==2.1.4
+matplotlib==3.8.2
+more-itertools==10.2.0
+mpld3==0.5.10
+mpmath==1.3.0
+networkx==3.2.1
+nltk==3.8.1
 numpy==1.26.3
+packaging==23.2
+pillow==10.2.0
+pptree==3.1
+protobuf==4.25.2
+psutil==5.9.8
 pydantic==2.5.3
 pydantic_core==2.14.6
+pyparsing==3.1.1
+PySocks==1.7.1
+python-dateutil==2.8.2
+pytorch_revgrad==0.2.0
 PyYAML==6.0.1
+regex==2023.12.25
+requests==2.31.0
+s3transfer==0.10.0
+safetensors==0.4.2
+scikit-learn==1.4.0
+scipy==1.12.0
+segtok==1.5.11
+semver==3.0.2
+sentencepiece==0.1.99
+six==1.16.0
+smart-open==6.4.0
 sniffio==1.3.0
+soupsieve==2.5
+sqlitedict==2.1.0
 starlette==0.35.1
+sympy==1.12
+tabulate==0.9.0
+threadpoolctl==3.2.0
+tokenizers==0.15.1
+torch==2.1.2
+tqdm==4.66.1
+transformer-smaller-training-vocab==0.3.3
+transformers==4.37.1
 typing_extensions==4.9.0
+urllib3==1.26.18
 uvicorn==0.27.0
+wcwidth==0.2.13
+Wikipedia-API==0.6.0
+wrapt==1.16.0
